@@ -270,6 +270,23 @@ doaltarobj(obj)  /* obj is an object dropped on an altar */
 			otense(obj, "land"));
 		obj->bknown = 1;
 	}
+	/* Also BUC one level deep inside containers */
+	if (Has_contents(obj)) {
+		int bcucount = 0;
+		struct obj *otmp;
+		for (otmp = obj->cobj; otmp; otmp = otmp->nobj) {
+			if (otmp->blessed || otmp->cursed)
+				bcucount++;
+			if (!Hallucination) otmp->bknown = 1;
+		}
+		if (bcucount == 1) {
+			pline("Looking inside %s, you see a colored flash.",
+					the(xname(obj)));
+		} else if (bcucount > 1) {
+			pline("Looking inside %s, you see colored flashes.",
+					the(xname(obj)));
+		}
+	}
 }
 
 #ifdef SINKS
