@@ -15,6 +15,7 @@
 	  - Autoexplore (from AceHack)
 	  - New category menu option: "Unidentified items"
 	  - 'X' toggles twoweaponing, explore mode is on alt-x resp. #xplore
+	  - BUC items inside containers dropped on altars (from AceHack)
 
 	* new dungeon features:
 	  - dead trees (from NetHack Brass)
